Fix mapping for Issue #1
Unit test fails.
the error is imported from https://github.com/intersystems-community/intersystems-iris-dev-template

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,4 +11,5 @@ services:
       - 55007:52773
       - 53773
     volumes:
-      - ./:/irisrun/repo
+#      - ./:/irisrun/repo
+      - ./:/home/irisowner/irisbuild
